--- a/client/src/app/layout/styles.css
+++ b/client/src/app/layout/styles.css
@@ -39,5 +39,9 @@ body {
   font-size: 1.7em;
   font-weight: normal;
 }
-
+.react-calendar {
+  width: 100%;
+  border: none;
+  box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
+}
 /*end home page styles*/
